crates/fig-lexer/tests/snapshots/integration_tests__variables__const_no_type.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Const
- Ident: MAX_SIZE
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1024"
    suffix: ~
- Newline
- Const
- Ident: DEFAULT_PORT
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "8080"
    suffix: ~
- Newline
- Const
- Ident: PI
- Eq
- FloatLiteral:
    digits: "3.14159"
    exponent: ~
    suffix: ~
- Newline
- Const
- Ident: ENABLED
- Eq
- "True"
- Newline
