crates/fig-lexer/tests/snapshots/integration_tests__variables__const_public.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Public
- Const
- Ident: VERSION
- Colon
- U32
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Public
- Const
- Ident: NAME
- Eq
- StringLiteral: fig
- Newline
