crates/fig-lexer/tests/snapshots/integration_tests__variables__mut_no_type.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: mut_vars
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Mut
- Ident: x
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Mut
- Ident: counter
- Eq
- IntegerLiteral:
    base: Decimal
    digits: "100"
    suffix: ~
- Newline
- Mut
- Ident: flag
- Eq
- "True"
- Newline
- Mut
- Ident: name
- Eq
- StringLiteral: initial
- Newline
- Pass
- Newline
- Dedent
